# relaleap

./: .gitignore  AUTOMATION_STATUS.md  LICENSE  README.md  pyproject.toml
baselines/: phase0_char_smoke_comparison.json
configs/: char_larger_support_wide_hep_temporal_clipped_objective_gate_seed3.yaml  char_smoke.yaml  char_smoke_hep_support_stress.yaml  char_validation_capacity_support_wide_hep_temporal_clipped_objective_gate.yaml  token_larger_hep_temporal_clipped_objective_gate.yaml
docs/: anticipatory_contextual_support_routing.md  colab_bridge.md  contextual_support_router_paper_draft.tex  core_periphery_pc_columns_for_acsr.md  phase0_report.md  relaleap_experiment_summary_report.tex  research_pivot_2026_06_23.md  runpod_bridge.md
notebooks/: README.md  relaleap_colab_smoke.ipynb
relaleap/: __init__.py  smoke.py
tests/: test_acsr_broader_mechanism_gate.py  test_acsr_causal_router_capacity_audit.py  test_acsr_causal_support_router_functional_intervention_design.py  test_acsr_causal_support_router_pivot_audit.py  test_acsr_columnability_gate_synthesis.py  test_acsr_common_causal_residual_benchmark.py  test_acsr_dense_control_retention_churn_closeout_report.py  test_acsr_dense_mechanism_observable_extractor.py  test_acsr_dense_rank_norm_synthesis.py  test_acsr_dense_residual_transfer_control.py  test_acsr_deployable_support_head_gate.py  test_acsr_dual_student_cross_forcing_synthesis.py  test_acsr_finite_update_commutator_assay.py  test_acsr_margin_aware_transfer_objective_design.py  test_acsr_mechanism_stratified_decision.py  (+238 more)
tools/: runpod_ssh_runner.py  (+2 more)
(+897 files in other folders)
