[project]
name = "relaleap"
version = "0.1.0"
description = "Residual layer learning prototypes for columnar PC/CC adaptation experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pydantic",
  "pyyaml",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
notebook = [
  "jupyter",
  "matplotlib",
]
colab-bridge = [
  "playwright",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["relaleap*"]
exclude = ["configs*", "docs*", "notebooks*", "results*", "tests*", "tools*"]
